@@ -32,30 +32,6 @@ __NPN_RetainObject
 __NPN_SetException
 __NPN_SetProperty
 __NPN_UTF8FromIdentifier
-__Z17NPN_VariantIsBoolPK10_NPVariant
-__Z17NPN_VariantIsNullPK10_NPVariant
-__Z17NPN_VariantIsVoidPK10_NPVariant
-__Z17NPN_VariantToBoolPK10_NPVariantPh
-__Z18NPN_VariantIsInt32PK10_NPVariant
-__Z18NPN_VariantToInt32PK10_NPVariantPi
-__Z19NPN_VariantIsDoublePK10_NPVariant
-__Z19NPN_VariantIsObjectPK10_NPVariant
-__Z19NPN_VariantIsStringPK10_NPVariant
-__Z19NPN_VariantToDoublePK10_NPVariantPd
-__Z19NPN_VariantToObjectPK10_NPVariantPP8NPObject
-__Z19NPN_VariantToStringPK10_NPVariant
-__Z22NPN_VariantIsUndefinedPK10_NPVariant
-__Z25_NPN_SetExceptionWithUTF8P8NPObjectPKci
-__Z27NPN_InitializeVariantAsNullP10_NPVariant
-__Z27NPN_InitializeVariantAsVoidP10_NPVariant
-__Z29NPN_InitializeVariantWithBoolP10_NPVarianth
-__Z30NPN_InitializeVariantWithInt32P10_NPVarianti
-__Z31NPN_InitializeVariantWithDoubleP10_NPVariantd
-__Z31NPN_InitializeVariantWithObjectP10_NPVariantP8NPObject
-__Z31NPN_InitializeVariantWithStringP10_NPVariantPK9_NPString
-__Z32NPN_InitializeVariantAsUndefinedP10_NPVariant
-__Z32NPN_InitializeVariantWithVariantP10_NPVariantPKS_
-__Z35NPN_InitializeVariantWithStringCopyP10_NPVariantPK9_NPString
 __ZN3KJS10Identifier3addEPKc
 __ZN3KJS10Identifier3addEPNS_7UString3RepE
 __ZN3KJS10Identifier5equalEPNS_7UString3RepEPKc
